test_regress/t/t_fork_func2_bad.out
%Error: t/t_fork_func2_bad.v:10:7: Only fork .. join_none is legal in functions. (IEEE 1800-2023 13.4.4)
                                 : ... note: In instance 't'
   10 |       fork
      |       ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
